Attempt to fix badly aligned footer

--- a/html/styles/db.css
+++ b/html/styles/db.css
@@ -16,6 +16,7 @@ body {
   overflow-x: hidden;
   background-color: #306E6D;
   color: #fff;
+  min-height: 100vh;
 }
 .center {
   display: block;
